hello/hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
  - port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy: {}
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: index-page
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: index-page
        configMap:
          name: hello-page
