hello/ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello
spec:
  routes:
  - kind: Rule
    match: Host(`rytis.be`) && Path(`/`)
    services:
    - name: hello
      port: 80
